--- a/Math123/inequalities.html
+++ b/Math123/inequalities.html
@@ -28,6 +28,86 @@
 
 <hr>
 
+<h2>Basic examples</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#basics">Motivation</button>
+  <div id="basics" class="collapse">
+    <ol type='1'>
+      <li>Determine whether the points below make the inequality \(7x - 3y > 24\) a true statement.
+        <ol type='a'>
+          <li>(5,1)
+          <li>(3,-4)
+          <li>(2,2)
+          <li>(4,1)
+          </ol>
+      <li>Graph the solution to the inequalities below.
+        <ol type='a'>
+          <li>\(y \geq 0 \)
+          <li>\(6x + 8y \leq 24\)
+          <li>\(5x + 3y < 15\)
+          <li>\(4x + 3y \geq 12\)
+          <li>\(9x - 2y < 18\)
+          <li>\(3x > 15\)
+          </ol>
+</div>
+
+<h2>Word problem</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wp1">Example</button>
+  <div id="wp1" class="collapse">
+    <P>The American Desk Company makes desks and tables.
+      There are 350 hours of labor available each week in the finishing room.
+      Each table requires 2.5 hours in the findishing room, and each desk requires 4 hours.
+      Graph the number of each that can be produced in one week.
+  </div>
+
+<h2>Word problem</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wp2">Example</button>
+    <div id="wp2" class="collapse">
+     <P>Anna is on a diet that requires no more than 1800 calories, no more than 60 grams of fat, and at least 275 grams of carbohydrates each day.
+       She has coupons for a nearby deli for their seafood and crab sandwich and their western egg sandwich so she plans one day's diet using only these two items.
+       The nutrional value of each sandwich in shown in the table below.
+       Write each inequality that expresses the nutrional requirements of the diet.<br>
+       <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax"></th>
+    <th class="tg-0lax">Calories</th>
+    <th class="tg-0lax">Fat [g]</th>
+    <th class="tg-0lax">Carbohydrates [g]</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax">Seafood and crab </td>
+    <td class="tg-0lax">410</td>
+    <td class="tg-0lax">16</td>
+    <td class="tg-0lax">52</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Western egg</td>
+    <td class="tg-0lax">300</td>
+    <td class="tg-0lax">12</td>
+    <td class="tg-0lax">36</td>
+  </tr>
+</tbody>
+</table>
+    </div>
+
+    <h2>Word problem</h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wp3">Example</button>
+      <div id="wp3" class="collapse">
+        <P>Nikia has up to $6400 for restocking the housewares section at Cox's Department Store.
+          She plans to buy single-serve coffee makers at $139 each, 12-cup programmable coffee makers at $65 each, and 12-speed blenders at $19 each.
+          Write the inequality that expresses the limits on the number of each item she can purchase.
+      </div>
+
 <h2>Translating word problems</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#idea">Motivation</button>
   <div id="idea" class="collapse">
