--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -26,7 +26,7 @@
   <body style="width:750px; padding-left: 1cm" background="bg.jpg">
 
   <h1>Linear Programming Problems</h1>
-<P>There are videos on the course Canvas page.<br>
+<P>There are videos on the course <a href="https://uwsto.instructure.com/courses/202177/pages/linear-programming-videos?module_item_id=3345836">Canvas page</a>.<br>
 <hr>
 
 <h2>Example - Oil refinery (Sys Ineq)</h2>
@@ -136,7 +136,7 @@ Find the number of lamps that should be shipped from each supplier to each store
 <h2>Example - Syrup Manufacturing</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exsm">Example</button>
   <div id="exsm" class="collapse">
-    <P>A syrup manufacturer blends 14 gallons of maple syrup and 18 gallons of corne syrup to make Maple Flavored Syrup and Taste O' Maple syrup.
+    <P>A syrup manufacturer blends 14 gallons of maple syrup and 18 gallons of corn syrup to make Maple Flavored Syrup and Taste O' Maple syrup.
       Each gallon of Maple Flavored Syrup has 0.3 gallons of corn syrup and 0.4 gallons of maple syrup.
       Each gallon of Taste O' Maple has 0.4 gallons of corn syrup and 0.2 gallons of maple syrup.
       Water and other stuff make up the rest of each gallon.
