--- a/Math123/simple_compound_interest.html
+++ b/Math123/simple_compound_interest.html
@@ -32,7 +32,7 @@ $(function () {
     <ul>
       <li><b>Simple Interest</b>
         <ul>
-        <li>interst: \(I = Prt\)
+        <li>interest: \(I = Prt\)
         <li>amount: \(A = P + I = P(1 + rt)\)
         </ul>
       <li><b>Compound Interest</b>
