--- a/Math123/simple_compound_interest.html
+++ b/Math123/simple_compound_interest.html
@@ -40,6 +40,11 @@ $(function () {
         <li>amount: \(A = P(1+i)^n = P(1+\frac{r}{m})^n\)
         <li>interest: \(I = A-P\)
         </ul>
+        <li><b>Simple Discount</b>
+          <ul>
+          <li>discount: \(D = Mrt\)
+          <li>proceeds: \(PR = M(1 - dt)\)
+          </ul>
       <li>Question: What does each variable represent in the equations above?
     </ul>
 </div>
