--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -30,8 +30,8 @@
 
 <!--$$begin{bmatrix} a & b\\ c & d \end{bmatrix}-->
 <h2>Exam cover sheet</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">cover</button>
-  <div id="ex1" class="collapse">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cov">cover</button>
+  <div id="cov" class="collapse">
 <object width="700" height="550" data="./Sp2022cover.pdf" type="application/pdf">
 Your browser does not support pdfs, <a href="./Sp2022cover.pdf">click here to
 download the file.</a></object>
@@ -47,8 +47,8 @@ download the file.</a></object>
       <li>Use separation of variables to find a general solution.
       <li>Use the integrating factor method to find a general solution. Does it agree with your solution from above?
       <li>What is the particular solution with \(y(0) = 1\)?
-      <li>Do you expect Euler's method to do a good job approximating this particular solution? Why or why not?
-      <li>Do you expect the Runge-Kutta method to do a better job than Euler? Why or why not?
+      <li><s>Do you expect Euler's method to do a good job approximating this particular solution? Why or why not?</s>
+      <li><s>Do you expect the Runge-Kutta method to do a better job than Euler? Why or why not?</s>
       <li>Sketch a slope field for the DE.
     </ol>
 </div>
@@ -58,7 +58,7 @@ download the file.</a></object>
 <div id="ex2" class="collapse">
 <P>Suppose a population of rodents satisfies the differential equation \(dP/dt = kP^2\).
   Initially there are \(P(0) = 2\) rodents, and their number is increasing at the rate of
-  \(dP/dt=1\) rodent per month when there are \(P=10\) rodents. How long will it take for the population to triple?
+  \(dP/dt=2\) rodents per month when there are \(P=4\) rodents. How long will it take for the population to triple?
 
 </div>
 
@@ -142,7 +142,7 @@ correspond to the year 1750.<br><br>
   </ol>
 </div>
 
-<footer style="text-align: center; padding-top: 5cm;">copyright Tyler Skorczewski 2022</footer>
+<footer style="text-align: center; padding-top: 5cm;">copyright Tyler Skorczewski 2022-2023</footer>
 
 </body>
 </html>
