--- a/math250/exam1review.html
+++ b/math250/exam1review.html
@@ -32,7 +32,7 @@
 <h2>Exam cover sheet</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cov">cover</button>
   <div id="cov" class="collapse">
-<object width="700" height="550" data="./Sp2022cover.pdf" type="application/pdf">
+<object width="700" height="550" data="./exam1cover.pdf" type="application/pdf">
 Your browser does not support pdfs, <a href="./Sp2022cover.pdf">click here to
 download the file.</a></object>
 </div>
