--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -33,7 +33,7 @@ $(function () {
       <li><b>Annuities</b>
         <ul>
         <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)<br><br>
-        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^{-n}}{i}\right]\)<br>
+        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)<br>
         </ul>
       <li><b>Amortization</b>
         <ul>
@@ -61,7 +61,7 @@ How much money do you have after 6 years?
 <h2>Example  - </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2a">Example </button>
   <div id="ex2a" class="collapse">
-    <p> What is the value of an annuity at the end of 20 years if $2000 is deposited into the account earning 8.5%
+    <p> What is the value of an annuity at the end of 20 years if $2000 is deposited annually into the account earning 8.5%
     interest compounded annually. How much of this is interest?
 </div>
 
@@ -224,6 +224,22 @@ recoup the money they paid upfront in lower monthly payments. Determine the numb
               </div>
 
 <br>
+
+<h2>Example - paying more than the minimum? </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex19">Example</button>
+  <div id="ex19" class="collapse">
+  <P> Consider a $300,000 30-year mortgage with 7% annual rate compounded monthly.
+    <ul>
+      <li>Calculate the monthly payment.
+      <li>Make an amortization table of the loan.
+      <li>How much is paid over the 30 life of the loan?
+      <li>What percentage of the total amount repaid is interest?
+      <li>Then adjust your amortization table to increase the payment by $100 from your monthly payment.
+      <li>When does the loan end now?
+      <li>What is the total amount repaid? How much is interest?
+      </ul>
+  </div>
+
 
 
 
