--- a/Math123/exam2_review_fall23.html
+++ b/Math123/exam2_review_fall23.html
@@ -27,6 +27,38 @@
   <h1>Exam 2 review</h1>
 
 <hr>
+<h2>Formulas</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#formula">Formulas </button>
+  <div id="formula" class="collapse">
+    <ul>
+      <li><b>Simple Interest</b>
+        <ul>
+        <li>interest: \(I = Prt\)
+        <li>amount: \(A = P + I = P(1 + rt)\)
+        </ul>
+      <li><b>Compound Interest</b>
+        <ul>
+        <li>amount: \(A = P(1+i)^n = P(1+\frac{r}{m})^n\)
+        <li>interest: \(I = A-P\)
+        </ul>
+        <li><b>Simple Discount</b>
+          <ul>
+          <li>discount: \(D = Mrt\)
+          <li>proceeds: \(PR = M(1 - dt)\)
+          </ul>
+      <li><b>Annuities</b>
+        <ul>
+        <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)<br><br>
+        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)<br>
+        </ul>
+      <li><b>Amortization</b>
+        <ul>
+        <li> payments: \(\displaystyle R = P \frac{i}{1 - (1+i)^{-n}} \)<br><br>
+        <li> loan balance: \(\displaystyle Balance = P (1 + i)^n - R \left[ \frac{(1 + i)^n - 1}{i} \right] \)
+        </ul>
+      <li>Question: What does each variable represent in the equations above?
+    </ul>
+</div>
 
 <h2>Linear Programming Problems</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#LP">LP Examples </button>
