--- a/math250/week10.html
+++ b/math250/week10.html
@@ -144,7 +144,7 @@
   <img src='prac_res.png' width=300><br>
   <ol type='1'>
     <li>What is \(\frac{dC}{d\omega_f} \)?
-    <li>Which graph (A,B, or C) of \(C(\omega_f)\) in the figure above occurs when \(b^2 > 2km\)? Explain your reasoning.
+    <li>Which graph (A,B, or C) of \(C(\omega_f)\) in the figure above occurs when \(b^2 \geq 2km\)? Explain your reasoning.
     <li>Assume \(b^2 < 2km\). At what forcing frequency is \(C(\omega_f)\) at a maximum?
   </ol>
 </div>
