--- a/Math123/linearprogramming.html
+++ b/Math123/linearprogramming.html
@@ -50,7 +50,7 @@
 
 
 
-<h2>Example</h2>
+<h2>Basic Example</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
   <div id="ex2" class="collapse">
 <p>Find the maximum of
@@ -61,8 +61,8 @@
   $$x \geq 0, y \geq 0. $$
 </div>
 
- <h2>Example</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2a">Example</button>
+ <h2>Example 1</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2a">Example 1</button>
   <div id="ex2a" class="collapse">
 <p>Find the maximum of
   $$P = 3x + 2y$$
@@ -77,8 +77,8 @@
     </details>
 </div>
 
-<h2>Example</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2b">Example</button>
+<h2>Example 2</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2b">Example 2</button>
   <div id="ex2b" class="collapse">
 <p>Maximize
   $$z = 8x + 4y$$
