--- a/Math123/counting_principles.html
+++ b/Math123/counting_principles.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:750px; padding-left: 1cm; padding-bottom: 10cm" background="bg.jpg">
+  <body style="width:750px; padding-left: 1cm; padding-bottom: 1cm" background="bg.jpg">
 
   <h1>Counting Principles</h1>
 
@@ -336,6 +336,9 @@ $(function () {
     </ol>
 </div>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
 <h2>Example - Travel teams</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex27">Example </button>
 <div id="ex27" class="collapse">
@@ -364,6 +367,33 @@ $(function () {
         <li> The professor shakes hands with each member of the seminar and in a different sequence each time.
           How many sequences of handshakes are possible?
         </ol>
-      </div>
+</div>
+
+<h2>Example - Initials </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exinit">Example </button>
+  <div id="exinit" class="collapse">
+  <P>Determine the largest group of people that can meet if no two people have the same three initials.
+    Assume people have first, middle, and last names in the English alphabet.
+
+  </div>
+
+<h2>Example - stock brokerage </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exsb">Example </button>
+  <div id="exsb" class="collapse">
+
+  <P>A stock brokerage firm has 9 new clients to divide among 3 account managers. How many ways are there to do this?
+  </div>
+
+<h2>Example - ATM pins</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exatm">Example </button>
+  <div id="exatm" class="collapse">
+
+  <P> The PIN number used at an ATM is a sequence of six digits, using the digits 0 through 9 with repetitions allowed?
+    <ol type='a'>
+      <li>How many PIN numbers are possible?
+      <li>How many PIN numbers are possible with no repetition of digits?
+      <li>How many PIN numbers are possible with <i>at least</i> one digit repeated?
+  </div>
+
 </body>
 </html>
