--- a/math154/calculus1_derivatives_exam_review.html
+++ b/math154/calculus1_derivatives_exam_review.html
@@ -98,7 +98,7 @@ ymax=input_box(1,label="max y"), ):
       </ol><br><br>
     <li>What is the 2024th derivative of \(y(x) = \sin(x)\)?<br><br>
     <li>Find the equation of the tangent line to the graph of \( f(x) = \sqrt{x+1} \) at \(x=8\).<br><br>
-    <li>If the position of a particle is given by \(v(t) = 3t^6 - 2t^2 - t\), find the velocity and acceleration as functions of \(t\).<br><br>
+    <li>If the position of a particle is given by \(r(t) = 3t^6 - 2t^2 - t\), find the velocity and acceleration as functions of \(t\).<br><br>
     <li>Find the derivative of \(\displaystyle g(x) = \sin^4 (x^3)(x^3 - x + 1)\)<br><br>
     <li>Sketch the derivative of the graph below.<br>
       <img src="./humorous-math-graph.png" width=400><br><br>
