--- a/math154/calculus3_lagrange_multipliers.html
+++ b/math154/calculus3_lagrange_multipliers.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:750px; padding-left: 1cm" background="bg.jpg">
+  <body style="width:750px; padding-left: 1cm" background="">
 
   <h1>Multivariable Optimization - Lagrange Multipliers</h1>
 
