--- a/math154/calculus1_integration_review.html
+++ b/math154/calculus1_integration_review.html
@@ -38,12 +38,12 @@ $(function () {
     <li>\(\displaystyle \int \frac{\sin (\ln (2x))}{x} ~dx\)<br><br>
   </ol>
 <br>
-<li>Evaluate the following limits:
+<!--<li>Evaluate the following limits:
   <ol type='i'>
     <li>\(\displaystyle \lim_{x \to \infty} \frac{e^{-x}}{x^2 + 2x + 6}\)<br><br>
     <li>\(\displaystyle \lim_{x \to 0} \frac{\sin x}{x}\)<br><br>
     <li>\(\displaystyle \lim_{x \to \infty} \frac{x^3 - 2x^2 + 4}{x - \sqrt{3x} - 4x^3}\)<br><br>
-  </ol>
+  </ol>-->
 <li>Water is pumped out of a holding tank at a rate of \(5 - 5e^{-0.12 t}\) liters/minute, where \(t\) is minutes since the pumping started.
   If the holding tank contains 1000 liters of water when the pumping started, how much water does it hold 1 hour later?
   Is the pumping rate increasing or decreasing? Can you come up with an explanation for this?<br><br>
