--- a/math154/calculus3_MV_FTOC.html
+++ b/math154/calculus3_MV_FTOC.html
@@ -81,7 +81,7 @@ one requires an integral. Which one? (Let \(r\) be appropriate for spherical or 
         Let \(\vec{F}\) be continously differentiable vector field whose domain includes \(S\). Then \(\displaystyle \iint_S \nabla \times \vec{F} \cdot d\vec{S} = \oint_{\partial S} \vec{F} \cdot d\vec{r}\).<br><br>
       <li> (Divergence Theorem or Gauss's Theorem) Let \(\Omega\) be a bounded solid region in \(\mathbb{R}^3\) whose boundary \(\partial \Omega\) consists of finitely many piecewise smooth, closed, oriented surfaces
         each of which is oriented by normals that point away from \(\Omega\). Let \(\vec{F}\) be continously differentiable vector field whose domain includes \(\Omega\).
-        Then \(\displaystyle \unicode{x222F} \hspace{-4.mm}\int_{\partial \Omega} \vec{F} \cdot d\vec{S} = \iiint_{\Omega} \nabla \cdot \vec{F}~dV\).
+        Then \(\displaystyle \iint_{\partial \Omega} \vec{F} \cdot d\vec{S} = \iiint_{\Omega} \nabla \cdot \vec{F}~dV\).
       </ol><br>
 
 
