--- a/math154/calculus3_MV_FTOC.html
+++ b/math154/calculus3_MV_FTOC.html
@@ -128,6 +128,15 @@ one requires an integral. Which one? (Let \(r\) be appropriate for spherical or 
         </ol>
   </div>
 
+<h2> Example </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exampledivcone">Example</button>
+  <div id="exampledivcone" class="collapse">
+Verify the divergence theorem for vector field  \(\vec{F}=(x−y)\hat{x} + (x+z) \hat{y} + (z−y)\hat{z}\) and surface  S
+  that consists of cone  \(x^2+y^2=z^2,0\leq z \leq 1\), and the circular top of the cone.
+  Assume this surface is positively oriented.
+  <img src="./divthmconeex.png" width=400><br>
+</div>
+
 <h2>Example - More Divergence Theorem </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example11">Example</button>
   <div id="example11" class="collapse">
