--- a/math154/M158FinalExamreview_Fall2021.html
+++ b/math154/M158FinalExamreview_Fall2021.html
@@ -24,7 +24,7 @@
   </head>
   <body style="width:800px; padding-left: 1cm; padding-bottom:5cm" background="">
 
-  <h1>Final Exam Review Fall 2021</h1>
+  <h1>Final Exam Review </h1>
 
 <hr>
 
