--- a/math154/calculus2_calc1review.html
+++ b/math154/calculus2_calc1review.html
@@ -30,7 +30,8 @@ $(function () {
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example1">Example 1</button>
   <div id="example1" class="collapse">
 <img src="images/northwestern_crow_feeding.jpg" width=400>
-<P><a href="https://fast.wistia.net/embed/iframe/zyjnhk7ja6">Video of crows dropping whelks</a>
+<!--<P><a href="https://fast.wistia.net/embed/iframe/zyjnhk7ja6">Video of crows dropping whelks</a>-->
+<P><a href="https://www.youtube.com/watch?v=J32OZzP-4os">Video of crows dropping whelks</a></P>
 <P>Goal: R. Zach observed crows usually fly to about 5 meters before dropping whelks and repeatedly drop same whelk until it opens. Can we understand why they display this behavior?
 <P>Question: What do you think may be important here? What variables would you collect if conducting your own experiment/observing crows?
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#whelkdata">Data - click after thinking about questions above</button>
