--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta http-equiv = "refresh" content = " time ; url = https://tyler-skorczewski-math.netlify.app/"/>
+	<meta http-equiv = "refresh" content = " 0 ; url = https://tyler-skorczewski-math.netlify.app/"/>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<title>Redirect to new homepage of Tyler Skorczewski</title>
 
