--- a/math154/more_integral_examples.html
+++ b/math154/more_integral_examples.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
 
   <h1>More Integral Examples</h1>
 
@@ -86,5 +86,8 @@ $(function () {
     <P>  <a href="./oct26_ex5_soln.pdf">Solution.</a>
   </div>
 
+  <footer style="padding-top:1cm;">Copyright Tyler Skorczewski 2020-2025</footer>
   </body>
+
+  
 </html>
