--- a/math154/exam4review.html
+++ b/math154/exam4review.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body style="width: 750px; padding-left: 1cm">
 
   <h1>Math 154 Exam 4 Review</h1>
 
