--- a/math250/intro_to_DE.html
+++ b/math250/intro_to_DE.html
@@ -78,7 +78,7 @@ Consider the models for the dynamics of the rumor below. Assume \(k > 0 \).
 <h2>Example 2 - Lake Eutrophication</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
   <div id="ex2" class="collapse">
-  <img src="./lakemenomin.jpg" width=350><br>
+  <img src="./lakemenomin.jpg" alt='image of eutrophic lake with lots of algae' width=350><br>
 
 <P>If you visit a lot of lakes of different sizes in different parts of the world, you will see
 that there are two common physical states. Some lakes are relatively clean and fresh-smelling—
@@ -175,3 +175,4 @@ reducing the number of uncertain parameters that must be estimated for simulatio
 
 </body>
 </html>
+
