--- a/math250/week2.html
+++ b/math250/week2.html
@@ -131,7 +131,7 @@ def _(f = input_box(f, label='dy/dt = ', width='20'), tmin=input_box(tmin,label=
 <h2>Example 3 - Drugs in the bloodstream </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
-  <img src="./pills.jpg" width=150><br>
+  <img src="./pills.jpg" alt='image of two pills' width=150><br>
   Consider taking a pill. The pill dissolves and enters the bloodstream at a rate proportional to the amount left in the pill.
   The body metabolizes the drug in the bloodstream at a rate proportional to the amount in the bloodstream.
   <ol type='1'>
@@ -153,7 +153,7 @@ def _(f = input_box(f, label='dy/dt = ', width='20'), tmin=input_box(tmin,label=
 <h2>Example 4 - Pies </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
 <div id="ex4" class="collapse">
-<img src="./applepie.jpg" width=300><br>
+<img src="./applepie.jpg" alt='image of apple pie slice' width=300><br>
 Imagine an apple pie just coming out of a 375 degree oven and resting on the counter in a kitchen at 75 degrees.
 We can't eat it until it has cooled down to 100 degrees. Let's use Newton's Law of Cooling with insulation constant 4/min to find the time it takes for the pie to cool.
 <ol type='1'>
@@ -186,7 +186,7 @@ We can't eat it until it has cooled down to 100 degrees. Let's use Newton's Law 
 <h2>Example 6 - Lake Erie </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-<a href="https://clevelandhistorical.org/items/show/58"><img src="./phactcuyahoga5.jpg" width=400><br>Lake Erie/Cuyahoga River on fire in 1969  </a><br>
+<a href="https://clevelandhistorical.org/items/show/58"><img src="./phactcuyahoga5.jpg" alt='image of cuyahoga river on fire' width=400><br>Lake Erie/Cuyahoga River on fire in 1969  </a><br>
 <P> Lake Erie has a total volume of 458 cubic kilometers. Assume the inflow/outflow rate are equal and 175 km\(^3\)/yr.
   Suppose at \(t=0\) the pollutant concentration is 0.05% and for \(t > 0\) pollutant concentration inflow is 0.01%.
   If we assume the lake is perfectly mixed (it is not), how long will it take until the lake has a pollutant concentration of 0.02%?
@@ -222,3 +222,4 @@ download the file.</a></object>
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
+
