--- a/math250/week4.html
+++ b/math250/week4.html
@@ -51,7 +51,7 @@
 <h2>Example 1 - Lab Diets</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
-  <img src="./labmice.jpg" width=300><br>
+  <img src="./labmice.jpg" alt='image of lab mice' width=300><br>
   <P> You are working in a laboratory that does experiments with animals. The animals in one particular experiment
     are to be kept on a strict diet of 20 grams protein and 6 grams fat each day. There are two food mixes the lab uses.
     Mix A has 10% protein and 6% fat. Mix B has 20% protein and 2% fat. Your task is to determine how many grams of each mix
@@ -84,7 +84,7 @@
 <h2>Example 3 - Lean manufacturing</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
-<img src="sixsigma.png" width=150><br>
+<img src="sixsigma.png" alt='image with number six and greek letter sigma' width=150><br>
 <P><a href="https://en.wikipedia.org/wiki/Lean_Six_Sigma">Lean</a> <a href="https://www.leanproduction.com/">manufacturing</a> is a corporate philosophy or operation strategy built around eliminating waste. This includes waste in inventory, production, and labor.
 
 <P>Consider a factory that makes down jackets, vests, and comforters. A jacket requires 3 lbs of down, a vest 2 lbs, and a comforter 4 lbs.
@@ -102,7 +102,7 @@
 <h2>Example 4 - Kirchoff's Laws </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
 <div id="ex4" class="collapse">
-<img src="./kirchoff2.png" width=400><br>
+<img src="./kirchoff2.png" lt ='A multiloop circuit diagram with two junctions and three branches carrying currents labeled \(I_{1}\), \(I_{2}\), and \(I_{3}\). The circuit contains two DC voltage sources, a \(10\text{V}\) source and a \(5\text{V}\) source, and four resistors with values of \(6\Omega \), \(2\Omega \), \(4\Omega \), and \(3\Omega \). The positive terminal of the \(10\text{V}\) source is connected to a \(6\Omega \) resistor, which is in series with a \(4\Omega \) resistor, forming the left loop. The \(5\text{V}\) source is in the bottom branch, in series with the \(4\Omega \) and \(3\Omega \) resistors. The right loop contains the \(3\Omega \) resistor in series with the \(6\Omega \) resistor. A \(2\Omega \) resistor is connected horizontally between the two main junctions, separating the left and right loops.' width=400><br>
   <P>The multiloop circuit shown above has two junctions and three branches carrying currents, \(I_1, I_2, I3\).
     Kirchoff's Voltage Law says that the sum of the voltage drops around any loop must be zero.
     The voltage drop across a resistor is given by Ohm's Law (\(V = IR\)) where \(I\) is the current and \(R\) is the resistance.
@@ -144,7 +144,7 @@
 <h2>Example 6 - More Kirchoff's Laws </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-<img src="./kirchoff.png" width=450><br>
+<img src="./kirchoff.png" alt='A circuit diagram showing four junctions, labeled j1 to j4, and six branches with currents I1 to I6, connected to a DC power source.' width=450><br>
 
 <P>The multiloop circuit shown above has four junctions, \(j_i\), and six branches carrying currents, \(I_i\).
   Kirchoff's Current Law says that the sum of the currents at each junction must be zero.
@@ -254,3 +254,4 @@
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020-2023</footer>
 </body>
 </html>
+
