--- a/math250/week5.html
+++ b/math250/week5.html
@@ -106,7 +106,7 @@
 <h2>Example 3 - Turtle populations</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
-<a href="./Crouse_etal_1987_ecology.pdf"><img src="./loggerhead_turtle.jpg" width=300></a><br>
+<a href="./Crouse_etal_1987_ecology.pdf"><img src="./loggerhead_turtle.jpg" alt='image of a loggerhead turtle' width=300></a><br>
 
 One way to model a population is to consider the number of individuals in certain stages of development.
 In <a href="./Crouse_etal_1987_ecology.pdf">Crouse et al.</a> they break up the loggerhead turtle population into seven distinct stages.
@@ -230,7 +230,7 @@ For what values of the scalar, \(\lambda\), does the matrix \(A - \lambda I\) ha
 <div id="ex9" class="collapse">
 
 Consider the figure below.<br>
-<img src="./lawofcosines.jpg" width=350><br>
+<img src="./lawofcosines.jpg" alt="Diagram of an oblique triangle labeled ABC, with angles A, B, and C and opposite sides a, b, and c, respectively " width=350><br>
 By dropping a perpendicular from each vertex to the opposite side, derive the equations below.
 $$c \cos B + b \cos C = a$$
 $$c \cos A + a \cos C = b$$
@@ -249,7 +249,7 @@ When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\
 \(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
 $$R_x  = \frac{R_2 R_3}{R_1}.$$
 We will derive this formula.<br>
-<img src="./wheatstonebridge.png" width=350><br>
+<img src="./wheatstonebridge.png" alt="Wheatstone bridge circuit diagram. The unknown resistance Rx is to be measured; resistances R1, R2 and R3 are known, where R2 is adjustable." width=350><br>
 
 <ol type='1'>
 <li> Use Kirchoff's current law to write equations for the currents \(I_1, I_2, I_3, I_x, I_G\) in junctions B and D.
@@ -278,3 +278,4 @@ We will derive this formula.<br>
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2022</footer>
 </body>
 </html>
+
