--- a/math250/week8.html
+++ b/math250/week8.html
@@ -100,7 +100,7 @@
 <h2>Example 4 - Circuit </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
 <div id="ex4" class="collapse">
-<img src="./basicRLC.png" width=300><br>
+<img src="./basicRLC.png" alt='RLC circuit with a 500 microfard capacitor, 100 mH inductor, and 50 Ohm resistor connected in series with a power source.' width=300><br>
 <P> Consider the circuit shown above. Let \(Q\) be the charge built up on the capacitor as a function of time and \(I\) be the current as a function of time.
   Kirchoff's Loop law says the voltage drops across the elements of a simple loop in a circuit is equal to the applied voltage, \(E\).
   Some voltage drops for common circuit elements is shown in the table below.<br>
@@ -192,3 +192,4 @@
 
 </body>
 </html>
+
