--- a/math250/week9.html
+++ b/math250/week9.html
@@ -58,7 +58,7 @@
 <h2>Example 2 - Mass spring systems </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
- <img src="./massspring.png" width=300><br>
+ <img src="./massspring.png" alt='cartoon of block with mass, m, connected to a wall by a spring with stiffness, k.' width=300><br>
  <P>Consider the mass-spring system above (moving on a frictionless table). A DE governing the displacement from equilibrium, \(x(t)\) is
    $$m x'' + b x' + k x = 0.$$
 
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
