--- a/math250/week10.html
+++ b/math250/week10.html
@@ -141,7 +141,7 @@
 <P> Let's consider the amplitude response to be a function of the forcing frequency, \(C \equiv C(\omega_f)\).
   $$C(\omega_f) = \frac{F_0}{\sqrt{(k-m\omega_f^2)^2 + (b \omega_f)^2}}$$
   Plots showing several different values of the other parameters are shown below.<br>
-  <img src='prac_res.png' width=300><br>
+  <img src='prac_res.png' alt='figure with three graphs showing amplitude response, C, versus forcing frequency for varying parameters. Graph A has a large peak. Graph B a moderate peak. Graph C has no peak and decreases monotonically.' width=300><br>
   <ol type='1'>
     <li>What is \(\frac{dC}{d\omega_f} \)?
     <li>Which graph (A,B, or C) of \(C(\omega_f)\) in the figure above occurs when \(b^2 \geq 2km\)? Explain your reasoning.
@@ -211,3 +211,4 @@ We will derive this formula.<br>
 
 </body>
 </html>
+
