--- a/math250/week10.html
+++ b/math250/week10.html
@@ -154,8 +154,23 @@
 <div id="ex6" class="collapse">
 <P>
   <ol type='a'>
-    <li> <img src="./resonance1.png" width=600>
-    <li> <img src="./resonance2.png" width=600>
+    <li> Which of the following forced 2nd order equations has solutions exhibiting resonace?
+    <li> \(y'' + y = \cos(t) \)</li>
+    <li> \(y'' + y = 2\cos(t) \)</li>
+    <li> \(y'' + y = -2\cos(t) \)</li>
+    <li> all of the above</li>
+    <li> none of the above</li>
+  
+  </li>
+    <!--<li> <img src="./resonance1.png" width=600> -->
+    <li> The differential equation \(4y'' + y = 2\cos(4t) \) has solutions clearly displaying
+       <li>(a) beats</li>
+       <li>(b) damping</li>
+       <li>(c) resonance</li>
+       <li>(d) all of the above</li>
+       <li>(e) none of the above</li>
+    </li>
+    <!-- <li> <img src="./resonance2.png" width=600> -->
   </ol>
 
 </div>
@@ -211,4 +226,5 @@ We will derive this formula.<br>
 
 </body>
 </html>
+
 
