--- a/math250/week12.html
+++ b/math250/week12.html
@@ -143,7 +143,7 @@ def _(funx=input_box(funx,label="x' = f(x,y) =  "),funy=input_box(funy,label="y'
 <h2>Example 6 - 2 story house </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-<img src="./house.png" width=400><br>
+<img src="./house.png" alt="A diagram for a two-story house heat transfer problem showing temperatures and thermal conductivities. The diagram illustrates a house cross-section with a bottom floor at temperature \(T_{1}\) and a top floor at temperature \(T_{2}\). Heat exchange occurs between the floors with conductivity \(k_{1,2}=1/2\) and between each floor and the outside environment, which has temperature \(A=0\). The conductivities for heat exchange with the outside are \(k_{1,A}=1/5\) for the bottom floor and \(k_{2,A}=1/10\) for the top floor." width=400><br>
 <p> Consider the 2 story house above. Imagine that the furnace breaks and that the temperature outside is \(A=0\).
   Heat can be exchanged between the top and bottom floors and the outside.
   <ol type='a'>
@@ -225,3 +225,4 @@ We will derive this formula.<br>
 
 </body>
 </html>
+
