--- a/math250/week12.html
+++ b/math250/week12.html
@@ -183,46 +183,14 @@ def _(funx=input_box(funx,label="x' = f(x,y) =  "),funy=input_box(funy,label="y'
 <P> Match each IVP with its associated phase plane and find the particular solution.
 <table>
   <tr> <th> IVP </th> <th> Phase planes</th></tr>
-  <tr> <td> 1) \(x'= 3x + 4y, y' = 3x + 2y, x(0)=y(0)=1 \) </td> <td align='left'> A)<img src="./wk12_ex8_ppD.png" width=300></td></tr>
-  <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='left'> B)<img src="./wk12_ex8_ppB.png" width=300></td></tr>
-  <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='left'> C)<img src="./wk12_ex8_ppC.png" width=300></td></tr>
-  <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='left'> D)<img src="./wk12_ex8_ppA.png" width=300></td></tr>
+  <tr> <td> 1) \(x'= 3x + 4y, y' = 3x + 2y, x(0)=y(0)=1 \) </td> <td align='left'> A)<img src="./wk12_ex8_ppD.png" alt='vector field with vectors spiralling counter-clockwise and growing' width=300></td></tr>
+  <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='left'> B)<img src="./wk12_ex8_ppB.png" alt='Vector field with vectors growing with distance from origin. Vectors in lower left triangle point up and left. Vectors in upper right triangle point down and right.' width=300></td></tr>
+  <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='left'> C)<img src="./wk12_ex8_ppC.png" alt='Vector field showing vectors in ovate pattern rotating counter-clockwise.' width=300></td></tr>
+  <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='left'> D)<img src="./wk12_ex8_ppA.png" alt='Vector field with vectors at top left and bottom right areas pointing toward origin and vectors in bottom left and top right pointing away from origin.' width=300></td></tr>
 </div>
 
-<!--
-<h2>Example 9 - Law of Cosines </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
-<div id="ex9" class="collapse">
-
-Consider the figure below.<br>
-<img src="./lawofcosines.jpg" width=350><br>
-By dropping a perpendicular from each vertex to the opposite side, derive the equations below.
-$$c \cos B + b \cos C = a$$
-$$c \cos A + a \cos C = b$$
-$$a \cos B + b \cos A = c$$
-<P>Rewrite these as three linear equations for the unknowns \(\cos A, \cos B\), and \(\cos C\). Row reduce this system to derive the <a href="https://en.wikipedia.org/wiki/Law_of_cosines">Law of Cosines</a>.
-
-</div>
-
-<h2>Example 10 - Wheatstone Bridge </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
-<div id="ex10" class="collapse">
-
-The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatsone bridge</a>. It is useful for determining an unknown resistance of an object.
-When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\) are known, while \(R_2\) is adjustable.
-\(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
-$$R_x  = \frac{R_2 R_3}{R_1}.$$
-We will derive this formula.<br>
-<img src="./wheatstonebridge.png" width=350><br>
-
-<ol type='1'>
-<li> Use Kirchoff's current law to write equations for the currents \(I_1, I_2, I_3, I_x, I_G\) in junctions B and D.
-<li> Use Kirchoff's voltage law to write equations for the currents in loops ABD and BCD.
-<li> When the bridge is balanced so \(I_G = 0\) we have 4 linear equations in the unknowns \(I_1, I_2, I_3, I_x\). Use these to derive the formula above.
-</ol>
-</div>
--->
 
 </body>
 </html>
+
 
