--- a/math250/week12.html
+++ b/math250/week12.html
@@ -187,10 +187,12 @@ def _(funx=input_box(funx,label="x' = f(x,y) =  "),funy=input_box(funy,label="y'
   <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='left'> B)<img src="./wk12_ex8_ppB.png" alt='Vector field with vectors growing with distance from origin. Vectors in lower left triangle point up and left. Vectors in upper right triangle point down and right.' width=300></td></tr>
   <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='left'> C)<img src="./wk12_ex8_ppC.png" alt='Vector field showing vectors in ovate pattern rotating counter-clockwise.' width=300></td></tr>
   <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='left'> D)<img src="./wk12_ex8_ppA.png" alt='Vector field with vectors at top left and bottom right areas pointing toward origin and vectors in bottom left and top right pointing away from origin.' width=300></td></tr>
+</table>
 </div>
 
 
 </body>
 </html>
+
 
 
