--- a/math250/week13.html
+++ b/math250/week13.html
@@ -116,7 +116,7 @@
 \end{array}
 \right\rbrack. $$
       </ol>
-    </td><td><img src="./phaseplanes_wk13.png" width=500></td></tr></table>
+    </td><td><img src="./phaseplanes_wk13.png" alt='Four parametric curves labeled A,B,C,D. Graph A starts near the bottom right, passes through (1,0) and ends near the origin. Graph B starts near the origin, proceeds up and to the right until the point (4,10) and then proceeds up and to the left. Graph C is the unit circle traversed counter-clockwise. Graph D is the unit cirle clockwise.' width=500></td></tr></table>
     <li>Find the eigenvalues of \(\vec{x}' = \begin{bmatrix}0 & 1 \\ -3/2 & -1/2\end{bmatrix} \vec{x}\).
     <li>Classify the (0,0) equilibrium solution to \(\vec{y}' = \begin{bmatrix}2 & -3 \\  3 & -5\end{bmatrix} \vec{y}\).
     </ol>
@@ -128,13 +128,13 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
     <P> Match each IVP with its associated phase plane and find the particular solution.
-    <table width=900>
-      <tr> <th> IVP </th> <th> Phase planes</th></tr>
-      <tr> <td> 1) \(x'= 3x + 4y, y' = 3x + 2y, x(0)=y(0)=1 \) </td> <td align='right'> A)<img src="./wk12_ex8_ppD.png" width=300></td></tr>
-      <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='right'> B)<img src="./wk12_ex8_ppB.png" width=300></td></tr>
-      <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='right'> C)<img src="./wk12_ex8_ppC.png" width=300></td></tr>
-      <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='right'> D)<img src="./wk12_ex8_ppA.png" width=300></td></tr>
-    </table>
+    <table>
+  <tr> <th> IVP </th> <th> Phase planes</th></tr>
+  <tr> <td> 1) \(x'= 3x + 4y, y' = 3x + 2y, x(0)=y(0)=1 \) </td> <td align='left'> A)<img src="./wk12_ex8_ppD.png" alt='vector field with vectors spiralling counter-clockwise and growing' width=300></td></tr>
+  <tr> <td> 2) \(x'= 9x + 5y, y' = -6x - 2y, x(0)= 1, y(0)=0 \) </td> <td align='left'> B)<img src="./wk12_ex8_ppB.png" alt='Vector field with vectors growing with distance from origin. Vectors in lower left triangle point up and left. Vectors in upper right triangle point down and right.' width=300></td></tr>
+  <tr> <td> 3) \(x'= 2x - 5y, y' = 4x - 2y, x(0)=2, y(0)=3 \) </td> <td align='left'> C)<img src="./wk12_ex8_ppC.png" alt='Vector field showing vectors in ovate pattern rotating counter-clockwise.' width=300></td></tr>
+  <tr> <td> 4) \(x'= x  - 2y, y' = 2x + y, x(0)=0, y(0)=4 \) </td> <td align='left'> D)<img src="./wk12_ex8_ppA.png" alt='Vector field with vectors at top left and bottom right areas pointing toward origin and vectors in bottom left and top right pointing away from origin.' width=300></td></tr>
+</table>
 
     <details>
       <summary>video solution</summary>
@@ -325,3 +325,4 @@
 
 </body>
 </html>
+
