--- a/math250/week14.html
+++ b/math250/week14.html
@@ -42,7 +42,7 @@
         <li> \(\displaystyle \frac{dx}{dt} = x - 2y, \hspace{1cm} \frac{dy}{dt} = 4x - x^3\)
         <li> \(\displaystyle \frac{dx}{dt} = x - y - x^2 + xy,\hspace{1cm}  \frac{dy}{dt} = -y -x^2\)
         </ol>
-        <img src="./phaseplanes_systems1.png" width=800><br>
+        <img src="./phaseplanes_systems1.png" alt='Five phase planes. Phase plane A has equilibrium solutions at (0,0),(-2,-1),(2,1). Phase plane B has an equilibrium solution at (1,1). Phase plane C has equilibrium solutions at (0,0), (-1,-1), (1,-1). Phase plane D has equilibrium solutions at (-2,2/3),(2,2/5). Phase plane E has an equilibrium solution at (-1,1).' width=800><br>
     </ol>
  </div>
 
@@ -284,3 +284,4 @@
 -->
 </body>
 </html>
+
